--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
